--- a/package.json
+++ b/package.json
@@ -11,25 +11,33 @@
     "test-socket": "node test-socket.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "keywords": ["chat", "socket.io", "express", "postgresql"],
+  "keywords": [
+    "chat",
+    "socket.io",
+    "express",
+    "postgresql"
+  ],
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.18.2",
-    "socket.io": "^4.8.1",
-    "sequelize": "^6.35.2",
-    "pg": "^8.11.3",
-    "pg-hstore": "^2.3.4",
     "bcryptjs": "^2.4.3",
-    "jsonwebtoken": "^9.0.2",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
+    "express": "^4.18.2",
+    "ioredis": "^5.3.2",
+    "jsonwebtoken": "^9.0.2",
     "multer": "^1.4.5-lts.1",
+    "node-turn": "^0.0.6",
+    "pg": "^8.11.3",
+    "pg-hstore": "^2.3.4",
+    "redis": "^4.6.12",
+    "sequelize": "^6.35.2",
+    "socket.io": "^4.8.1",
     "uuid": "^9.0.1"
   },
   "devDependencies": {
-    "nodemon": "^3.0.2",
     "axios": "^1.6.0",
+    "nodemon": "^3.0.2",
     "socket.io-client": "^4.8.1"
   }
 }
