updated for minio for media upload support

--- a/.env.example
+++ b/.env.example
@@ -26,5 +26,20 @@ TURN_SERVER_PASSWORD=
 UPLOAD_PATH=./uploads
 MAX_FILE_SIZE=10485760
 
+# MinIO Configuration
+MINIO_ENDPOINT=localhost
+MINIO_PORT=9000
+MINIO_USE_SSL=false
+MINIO_ACCESS_KEY=minioadmin
+MINIO_SECRET_KEY=minioadmin
+MINIO_BUCKET=chatapp-media
+MINIO_PUBLIC_URL=
+
+# File Upload Limits (in bytes)
+MAX_IMAGE_SIZE=10485760      # 10 MB
+MAX_VIDEO_SIZE=10485760      # 10 MB
+MAX_AUDIO_SIZE=10485760      # 10 MB
+MAX_DOCUMENT_SIZE=52428800   # 50 MB
+
 # CORS Configuration
 CORS_ORIGIN=*
