--- a/.gitignore
+++ b/.gitignore
@@ -15,3 +15,4 @@ notification_plan.md
 # Firebase
 firebase-service-account.json
 chatapp-488b1-firebase-adminsdk-fbsvc-ea441981de.json
+test-media-upload.js
