--- a/package.json
+++ b/package.json
@@ -32,12 +32,15 @@
     "firebase-admin": "^12.0.0",
     "ioredis": "^5.3.2",
     "jsonwebtoken": "^9.0.2",
+    "mime-types": "^2.1.35",
+    "minio": "^7.1.3",
     "multer": "^1.4.5-lts.1",
     "node-turn": "^0.0.6",
     "pg": "^8.11.3",
     "pg-hstore": "^2.3.4",
     "redis": "^4.6.12",
     "sequelize": "^6.35.2",
+    "sharp": "^0.33.5",
     "socket.io": "^4.8.1",
     "uuid": "^9.0.1"
   },
